--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,28 @@
 <div id="mbfootemb">
 
 	<div id="mbfooter" class="container">
-	
+
 			<br />
-	
+
 			<div id="social-media-wrapper">
-				
+
 				<ul>
-					<li><a href="http://www.yelp.com/biz/red-butte-garden-and-arboretum-salt-lake-city"><div class="yelp"></div></a></li>
-					<li><a href="http://www.tripadvisor.com/Attraction_Review-g60922-d269627-Reviews-Red_Butte_Garden-Salt_Lake_City_Utah.html"><div class="tripadvisor"></div></a></li>
-					<li><a href="https://plus.google.com/115349740133726957245/about"><div class="googleplus"></div></a></li>
-					<li><a href="https://www.facebook.com/redbutte"><div class="facebook"></div></a></li>
-					<li><a href="https://instagram.com/redbuttegarden/"><div class="instagram"></div></a></li>
-					<li><a href="https://twitter.com/redbuttegarden"><div class="twitter"></div></a></li>
-					<li><a href="https://www.youtube.com/user/RedButteGarden"><div class="youtube"></div></a></li>
-					<li><a href="http://www.redbuttegarden.org/social-media"><div class="snapchat"></div></a></li>
-					<li><a href="http://www.reddit.com/r/redbuttegarden"><div class="reddit"></div></a></li>
-					<li><a href="https://www.pinterest.com/redbuttegarden/"><div class="pinterest"></div></a>
+					<li><a href="#"><div class="yelp"></div></a></li>
+					<li><a href="#"><div class="tripadvisor"></div></a></li>
+					<li><a href="#"><div class="googleplus"></div></a></li>
+					<li><a href="#"><div class="facebook"></div></a></li>
+					<li><a href="#"><div class="instagram"></div></a></li>
+					<li><a href="#"><div class="twitter"></div></a></li>
+					<li><a href="#"><div class="youtube"></div></a></li>
+					<li><a href="#"><div class="snapchat"></div></a></li>
+					<li><a href="#"><div class="reddit"></div></a></li>
+					<li><a href="#"><div class="pinterest"></div></a>
 				</ul>
-				
+
 			</div>
-	
+
 			<div class="space"><hr></div><div class="space"><hr></div><div class="space"><hr></div>
-			
+
 			<div id="mbfooterlinks">
 				<ul>
 					<li><a href="/contact">CONTACT US</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
@@ -31,12 +31,12 @@
 					<li><a href="#">YOUR PRIVACY RIGHTS</a></li>
 				</ul>
 			</div>
-			
+
 		<div class="row">
-	
-			<div id="contactinfo1" class="col-sm-12"><a href="mailto:email@motobasics.com">email@motobasics.com</a></div>
-			<div id="contactinfo2" class="col-sm-12">Copyright &copy2016 MotoBasics</div>	
-	
+
+			<div id="contactinfo1" class="col-sm-12"><a href="mailto:email@kushbasics.com">email@kushbasics.com</a></div>
+			<div id="contactinfo2" class="col-sm-12">Copyright &amp;copy2017 KushBasics</div>
+
 		</div>
 		<div class="space"><hr></div>
 	</div>
