--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" /> <!-- Google Font 'Open Sans' -->
-  <link rel="stylesheet" href="CSS/summer.css"> <!-- Additional local CSS -->
+  <link rel="stylesheet" href="CSS/kushbasics.css"> <!-- Additional local CSS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
@@ -17,22 +17,22 @@
 <nav class="navbar navbar-inverse">
 
   <div id="navbarbg" class="container-fluid">
-    
-    <div id="rbgnavbar" class="container">    
-    
+
+    <div id="rbgnavbar" class="container">
+
 		<div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>                        
+	        <span class="icon-bar"></span>
 	      </button>
-	      <a id="logo" class="pull-left" href="http://www.redbuttegarden.org"><img src="images/logo.png" alt="Red Butte Garden"></a>
+	      <a id="logo" class="pull-left" href="http://www.kushbasics.com"><img src="images/logo.png" alt="Kush Basics"></a>
 	    </div>
-	    
+
 	    <div class="collapse navbar-collapse" id="myNavbar">
-	      
+
 	      <ul class="nav navbar-nav">
-	        
+
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">VISIT <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
@@ -44,7 +44,7 @@
 	            <li><a href="#">POETRY IN <br />THE GARDEN</a></li>
 	          </ul>
 	        </li>
-	        
+
 			<li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PLANTS & GARDENS <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
@@ -55,7 +55,7 @@
 	            <li><a href="#">GARDENING IN UTAH</a></li>
 	          </ul>
 	        </li>
-			
+
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EVENTS <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
 	            <li><a href="#">EVENT CALENDAR</a></li>
 	          </ul>
 	        </li>
-			
+
 			<li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EDUCATION <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
@@ -78,7 +78,7 @@
 	            <li><a href="#">TEACHERS & STUDENTS</a></li>
 	          </ul>
 	        </li>
-	        
+
 			<li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GET INVOLVED <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
@@ -104,33 +104,33 @@
 	            <li><a href="#">BIRTHDAY PARTIES</a></li>
 	          </ul>
 	        </li>
-	     
+
 	      </ul>
-	     
+
 	     <div>
 		     <div class="rbgsearch">
 				<form>
 					<span><input type="text" class="search rounded" placeholder="Search..."></span>
 				</form>
-			 </div>	     
-	
+			 </div>
+
 		     <div class="nav-button">
 		     	<a href=""><img src="images/give.png"></a>
 		     </div>
-		     
+
 		     <div class="nav-button">
 		     	<a href="/memberships"><img src="images/join.png"></a>
 		     </div>
-		     
+
 		     <div class="nav-button">
 		     	<a href="/volunteer"><img src="images/volunteer.png"></a>
 		     </div>
 	     </div>
-	     
+
 	    </div>
-    
+
     </div>
-      
+
   </div>
-  
+
 </nav>
